--- a/stories/tools/common-utils.stories.mdx
+++ b/stories/tools/common-utils.stories.mdx
@@ -52,6 +52,6 @@ type WithChildren<T> = T & { children?: WithChildren<T>[] }
 
 对树状结构的数据进行排序。layeredSort 是一个递归的过程，针对树上的每一个父节点，该函数都会重新对其子节点数组（children) 进行排序.
 
-### `smartCompare`
+### `compareStringOrNumber`
 
 主要用途：比较字符串（字典序）或是数字（自然序）
