docs: 更新 storybook 示例

--- a/stories/base-table/base-table-advanced-usage.stories.mdx
+++ b/stories/base-table/base-table-advanced-usage.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="基础表格 / 注意事项" />
+<Meta title="基础表格 / 进阶用法" />
 
 ## 虚拟滚动
 
