--- a/stories/changelog.stories.mdx
+++ b/stories/changelog.stories.mdx
@@ -5,6 +5,11 @@ import LinkTo from '@storybook/addon-links/react'
 
 请注意日志中的加粗部分(break change)哦 ヾ(=･ω･=)o
 
+## unreleased
+
+- **Break Change: refactor: 移除 ali-react-table/biz 入口（1.0 以前不会真正移除，只会添加警告）**
+- **Break Change: refactor: 移除 commonTransforms， commonTransforms.XXX 改名为 makeXXXTransform**
+
 ## v0.13.2 2020-05-19
 
 - feat: 拖拽 <LinkTo kind="表格功能拓展 / 功能拓展示例" story="拖拽调整列宽">拖拽调整列宽</LinkTo>
