feat: 添加 type CellProps，新增 mergeCellProps

--- a/stories/pivot/cross-table.stories.mdx
+++ b/stories/pivot/cross-table.stories.mdx
@@ -144,7 +144,7 @@ interface CrossTableProps extends Omit<BaseTableProps, 'dataSource' | 'columns' 
     topNode: TopCrossTreeNode,
     leftDepth: number,
     topDepth: number,
-  ): React.TdHTMLAttributes<HTMLTableDataCellElement>
+  ): CellProps
 }
 
 export interface CrossTableLeftMetaColumn extends Omit<ArtColumnStaticPart, 'hidden'> {
@@ -152,7 +152,7 @@ export interface CrossTableLeftMetaColumn extends Omit<ArtColumnStaticPart, 'hid
   render?(leftNode: LeftCrossTreeNode, leftDepth: number): ReactNode
 
   /** 自定义的获取单元格 props 的方法 */
-  getCellProps?(leftNode: LeftCrossTreeNode, leftDepth: number): React.TdHTMLAttributes<HTMLTableCellElement>
+  getCellProps?(leftNode: LeftCrossTreeNode, leftDepth: number): CellProps
 }
 ```
 
