--- a/stories/pivot/cross-tree-table.stories.mdx
+++ b/stories/pivot/cross-tree-table.stories.mdx
@@ -105,7 +105,7 @@ export interface CrossTreeTableProps extends Omit<BaseTableProps, 'dataSource' |
     topNode: TopCrossTreeNode,
     leftDepth: number,
     topDepth: number,
-  ): React.TdHTMLAttributes<HTMLTableDataCellElement>
+  ): CellProps
 }
 
 export interface CrossTableLeftMetaColumn extends Omit<ArtColumnStaticPart, 'hidden'> {
@@ -113,7 +113,7 @@ export interface CrossTableLeftMetaColumn extends Omit<ArtColumnStaticPart, 'hid
   render?(leftNode: LeftCrossTreeNode, leftDepth: number): ReactNode
 
   /** 自定义的获取单元格 props 的方法 */
-  getCellProps?(leftNode: LeftCrossTreeNode, leftDepth: number): React.TdHTMLAttributes<HTMLTableCellElement>
+  getCellProps?(leftNode: LeftCrossTreeNode, leftDepth: number): CellProps
 }
 ```
 
