refactor: 移除表格操作栏与自定义列对话框

--- a/stories/examples/CustomColumnsDialog.stories.mdx
+++ b/stories/examples/CustomColumnsDialog.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 
-<Meta title="表格功能拓展 / React组件 / 自定义列对话框" />
+<Meta title="示例 / 自定义列对话框" />
 
 # `CustomColumnsDialog`
 
