--- a/stories/examples/operation-bar.stories.mdx
+++ b/stories/examples/operation-bar.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 
-<Meta title="表格功能拓展 / hooks / 表格操作栏" />
+<Meta title="示例 / 表格操作栏 hooks" />
 
 # `hooks useOperationBar`
 
