docs: 完善通用工具函数的文档

--- a/stories/base-table/base-table-advanced-usage.stories.mdx
+++ b/stories/base-table/base-table-advanced-usage.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="基础表格 / 进阶用法" />
+<Meta title="基础表格 / 配置的进阶说明" />
 
 ## 虚拟滚动
 
