--- a/stories/biz/common-transforms/4-column-hover.stories.mdx
+++ b/stories/biz/common-transforms/4-column-hover.stories.mdx
@@ -48,10 +48,10 @@ type ColumnHoverOptions = {
 
 ## 非受控用法
 
-ali-react-table/biz 也提供了非受控的使用方式：useColumnHoverTransform。两者与受控用法类似，但移除了 hoverColIndex/onChangeHoverColIndex，同时增加了 defaultHoverColIndex.
+ali-react-table 也提供了非受控的使用方式：useColumnHoverTransform。两者与受控用法类似，但移除了 hoverColIndex/onChangeHoverColIndex，同时增加了 defaultHoverColIndex.
 
 ```javascript
-import { useColumnHoverTransform } from 'ali-react-table/biz'
+import { useColumnHoverTransform } from 'ali-react-table'
 
 function MyComponent() {
   const columnHover = useColumnHoverTransform()
