--- a/stories/biz/common-transforms/5-column-resize.stories.mdx
+++ b/stories/biz/common-transforms/5-column-resize.stories.mdx
@@ -36,4 +36,4 @@ interface ColumnResizeOptions {
 
 ## 非受控用法
 
-ali-react-table/biz 也提供了非受控的用法，useColumnResizeTransform 在受控的基础上移除了 sizes/onChangeSizes，同时新增了 defaultSizes 参数。
+ali-react-table 也提供了非受控的用法，useColumnResizeTransform 在受控的基础上移除了 sizes/onChangeSizes，同时新增了 defaultSizes 参数。
