--- a/stories/tools/internal-getters.stories.mdx
+++ b/stories/tools/internal-getters.stories.mdx
@@ -12,7 +12,7 @@ ali-react-table 导出的内部方法如下：
 - safeGetValue(column, record, rowIndex) 获取单元格的值
 - safeGetRowKey(primaryKey, record, rowIndex) 获取某一行的 key
 - safeGetCellProps(column, record, rowIndex) 获取单元格的 props
-- safeRender（column, record, rowIndex) 获取单元格的渲染内容
+- safeRender(column, record, rowIndex) 获取单元格的渲染内容
 
 使用示例：
 
