docs: 更新文档名称

--- a/stories/biz/common-transforms/1-tree-mode.stories.mdx
+++ b/stories/biz/common-transforms/1-tree-mode.stories.mdx
@@ -1,11 +1,11 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="表格功能拓展 / 常用功能 / 树状模式" />
+<Meta title="表格常见功能 / 常用功能 / 树状模式" />
 
 # 树状模式
 
-本页文档将介绍 ali-react-table 提供的树状模式的相关 API。本页中的示例源码可在 <LinkTo kind="表格功能拓展 / 功能拓展示例" story="树状表格">表格功能拓展-功能拓展示例</LinkTo> 查看。
+本页文档将介绍 ali-react-table 提供的树状模式的相关 API。本页中的示例源码可在 <LinkTo kind="表格常见功能 / 常见功能示例" story="树状表格">表格常见功能-常见功能示例</LinkTo> 查看。
 
 ## buildTree 从列表数据中构建树状数据
 
@@ -68,7 +68,7 @@ function MyComponent() {
 ## 基本示例
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--树状表格" />
+  <Story id="表格常见功能-常见功能示例--树状表格" />
 </Preview>
 
 ## 进阶用法 —— 异步数据加载
