--- a/stories/biz/common-transforms/2-sort.stories.mdx
+++ b/stories/biz/common-transforms/2-sort.stories.mdx
@@ -1,11 +1,11 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="表格功能拓展 / 常用功能 / 排序" />
+<Meta title="表格常见功能 / 常用功能 / 排序" />
 
 # 排序
 
-本页文档将介绍 ali-react-table 提供的排序的相关 API。本页中的示例源码可在 <LinkTo kind="表格功能拓展 / 功能拓展示例" story="表格排序-单列">表格功能拓展-功能拓展示例</LinkTo> 查看。
+本页文档将介绍 ali-react-table 提供的排序的相关 API。本页中的示例源码可在 <LinkTo kind="表格常见功能 / 常见功能示例" story="表格排序-单列">表格常见功能-常见功能示例</LinkTo> 查看。
 
 ## sort 表格排序
 
@@ -67,7 +67,7 @@ function MyComponent() {
 ## 基本示例
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--表格排序-单列" />
+  <Story id="表格常见功能-常见功能示例--表格排序-单列" />
 </Preview>
 
 ## 进阶用法 —— 树状排序
@@ -84,7 +84,7 @@ const renderData = applyTransforms(
 ```
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--树状模式与层级排序" />
+  <Story id="表格常见功能-常见功能示例--树状模式与层级排序" />
 </Preview>
 
 ## 进阶用法 —— 自定义比较函数
@@ -125,5 +125,5 @@ interface SortHeaderCellProps {
 ```
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--自定义样式的排序表头" />
+  <Story id="表格常见功能-常见功能示例--自定义样式的排序表头" />
 </Preview>
