--- a/stories/biz/common-transforms/3-auto-row-span.stories.mdx
+++ b/stories/biz/common-transforms/3-auto-row-span.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="表格功能拓展 / 常用功能 / 单元格自动合并" />
+<Meta title="表格常见功能 / 常用功能 / 单元格自动合并" />
 
 # 单元格自动合并
 
@@ -14,5 +14,5 @@ import LinkTo from '@storybook/addon-links/react'
 `column.feature.autoRowSpan` 也可以设置为一个比较函数，用来自定义「两个单元格中的值相等」的判断逻辑。其函数签名为 `(val1: any, val2: any) => boolean`
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--单元格自动合并" />
+  <Story id="表格常见功能-常见功能示例--单元格自动合并" />
 </Preview>
