--- a/stories/biz/common-transforms/5-column-resize.stories.mdx
+++ b/stories/biz/common-transforms/5-column-resize.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="表格功能拓展 / 常用功能 / 拖拽调整列宽" />
+<Meta title="表格常见功能 / 常用功能 / 拖拽调整列宽" />
 
 # 拖拽调整列宽
 
@@ -31,7 +31,7 @@ interface ColumnResizeOptions {
 ```
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--拖拽调整列宽" />
+  <Story id="表格常见功能-常见功能示例--拖拽调整列宽" />
 </Preview>
 
 ## 非受控用法
