--- a/stories/biz/common-transforms/6-others.stories.mdx
+++ b/stories/biz/common-transforms/6-others.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="表格功能拓展 / 常用功能 / 其他功能" />
+<Meta title="表格常见功能 / 常用功能 / 其他功能" />
 
 ## flatten 「压平」分组
 
@@ -22,7 +22,7 @@ import LinkTo from '@storybook/addon-links/react'
   - 在列标题旁边展示一个 ℹ 符号，鼠标悬停时展示提示气泡，气泡内容由 `columns.features.tips` 提供
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--列气泡提示" />
+  <Story id="表格常见功能-常见功能示例--列气泡提示" />
 </Preview>
 
 ## visible 调整可见列
