--- a/stories/changelog.stories.mdx
+++ b/stories/changelog.stories.mdx
@@ -12,7 +12,7 @@ import LinkTo from '@storybook/addon-links/react'
 
 ## v0.13.2 2020-05-19
 
-- feat: 拖拽 <LinkTo kind="表格功能拓展 / 功能拓展示例" story="拖拽调整列宽">拖拽调整列宽</LinkTo>
+- feat: 拖拽 <LinkTo kind="表格常见功能 / 常见功能示例" story="拖拽调整列宽">拖拽调整列宽</LinkTo>
 - feat: 新增 <LinkTo kind="交叉与透视 / 交叉树状表格" story="page">CrossTreeTable</LinkTo>
 - feat: 新增部分 transform 的非受控用法
   - useColumnHoverTransform
@@ -46,17 +46,17 @@ import LinkTo from '@storybook/addon-links/react'
 
 ## v0.12.1 2020-04-13
 
-- 新增表格功能拓展：自动单元格合并 [#4](https://github.com/alibaba/ali-react-table/pull/4)
+- 新增表格常见功能：自动单元格合并 [#4](https://github.com/alibaba/ali-react-table/pull/4)
 - 优化加载图标的显示位置 [#13](https://github.com/alibaba/ali-react-table/pull/13)
 - 优化表格行 hover 效果处理 [#12](https://github.com/alibaba/ali-react-table/pull/12)
 - 新增：表头部分添加 onWheel 监听 [#10](https://github.com/alibaba/ali-react-table/pull/10)
-- 新增：表格功能拓展 treeMode 允许上层定义 isLeafNode [#6](https://github.com/alibaba/ali-react-table/pull/6)
+- 新增：表格常见功能 treeMode 允许上层定义 isLeafNode [#6](https://github.com/alibaba/ali-react-table/pull/6)
 
 ## v0.12.0 2020-04-02
 
 - ✨ 开源，NPM package 名称换为 ali-react-table
 - 新增 ali-react-table/biz, ali-react-table/pivot 两个 sub-package
-  - 表格功能拓展相关符号通过 biz 进行导出
+  - 表格常见功能相关符号通过 biz 进行导出
   - 交叉与透视功能相关符号通过 pivot 进行导出
 - 移除了 BaseTable#onRowClick
 
