--- a/stories/examples/CustomColumnsDialog.stories.mdx
+++ b/stories/examples/CustomColumnsDialog.stories.mdx
@@ -7,7 +7,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 自定义列对话框组件
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--自定义列对话框组件" />
+  <Story id="表格常见功能-常见功能示例--自定义列对话框组件" />
 </Preview>
 
 ## 必传的 props 列表
