--- a/stories/pivot/dvt-aggregation.stories.mdx
+++ b/stories/pivot/dvt-aggregation.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 
-<Meta title="工具 / 聚合函数生成器" />
+<Meta title="交叉与透视 / 工具-聚合函数生成器" />
 
 # 聚合函数生成器
 
