--- a/stories/base-table/base-table.stories.mdx
+++ b/stories/base-table/base-table.stories.mdx
@@ -5,7 +5,7 @@ import LinkTo from '@storybook/addon-links/react'
 
 # 基础表格
 
-基础表格 `BaseTable`是 ali-react-table 中各个表格组件的底层组件，提供了基本的表格渲染能力。BaseTable 只提供了基本的表格渲染能力，一些常见的表格功能（排序、树状模式等）详见 <LinkTo kind="表格功能拓展 / 文档" story="page">表格功能拓展</LinkTo>.
+基础表格 `BaseTable`是 ali-react-table 中各个表格组件的底层组件，提供了基本的表格渲染能力。BaseTable 只提供了基本的表格渲染能力，一些常见的表格功能（排序、树状模式等）详见 <LinkTo kind="表格常见功能 / 文档" story="page">表格常见功能</LinkTo>.
 
 BaseTable 自带了一些非常实用的特性（表头吸顶、锁列、单元格合并等），并支持虚拟滚动，支持大数据量渲染。
 
