--- a/stories/biz/common-transforms/4-column-hover.stories.mdx
+++ b/stories/biz/common-transforms/4-column-hover.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="表格功能拓展 / 常用功能 / 列高亮" />
+<Meta title="表格常见功能 / 常用功能 / 列高亮" />
 
 # 列高亮
 
@@ -21,7 +21,7 @@ type ColumnHoverOptions = {
 ```
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--列高亮" />
+  <Story id="表格常见功能-常见功能示例--列高亮" />
 </Preview>
 
 ## columnRangeHover 列范围高亮
@@ -43,7 +43,7 @@ type ColumnHoverOptions = {
 ```
 
 <Preview>
-  <Story id="表格功能拓展-功能拓展示例--列的范围高亮" />
+  <Story id="表格常见功能-常见功能示例--列的范围高亮" />
 </Preview>
 
 ## 非受控用法
