docs: 调整文档目录

--- a/stories/changelog.stories.mdx
+++ b/stories/changelog.stories.mdx
@@ -9,6 +9,7 @@ import LinkTo from '@storybook/addon-links/react'
 
 - **Break Change: refactor: 移除 ali-react-table/biz 入口（1.0 以前不会真正移除，只会添加警告）**
 - **Break Change: refactor: 移除 commonTransforms， commonTransforms.XXX 改名为 makeXXXTransform**
+- 文档目录重构
 
 ## v0.13.2 2020-05-19
 
