--- a/stories/pivot/cross-table.stories.mdx
+++ b/stories/pivot/cross-table.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 
-<Meta title="交叉与透视 / 交叉表" />
+<Meta title="交叉与透视 / 交叉表 / 文档" />
 
 # 交叉表
 
@@ -42,7 +42,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 ```
 
 <Preview>
-  <Story id="交叉与透视-交叉表示例--基本用法" />
+  <Story id="交叉与透视-交叉表-示例--基本用法" />
 </Preview>
 
 ## leftTree 的结构
