--- a/stories/pivot/cross-tree-table.stories.mdx
+++ b/stories/pivot/cross-tree-table.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks'
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="交叉与透视 / 交叉树状表格" />
+<Meta title="交叉与透视 / 交叉树状表格 / 文档" />
 
 # 交叉树状表格
 
@@ -54,7 +54,7 @@ CrossTreeTable 主要由以下几个部分组成：
 ```
 
 <Preview>
-  <Story id="交叉与透视-交叉树状表格示例--基本示例" />
+  <Story id="交叉与透视-交叉树状表格-示例--基本示例" />
 </Preview>
 
 ## leftTree 的结构 / topTree 的结构
